# effz

./: .gitignore  .gitmodules  .ycm_extra_conf.py  ChangeLog  Makefile.am  README  README.md  configure.ac  makefile
data/: i_direct_database.txt  i_exchange_database.txt
include/: arb_whittaker.h  effz_atomic_data.h  effz_exceptions.h  effz_helper_func.h  effz_integration.h  effz_main_loop_function.h  effz_main_loop_functions.h  effz_parallel_func.h  effz_python_utility.h  effz_result.h  effz_spec_func.h  effz_user_input.h  effz_utility.h  effz_zeroth_order.h  effz_zeroth_order_python.h  gsl_monte_complex.h  spec_func.h  utility.h
man/: Makefile.am  effz.1
src/: Makefile.am  effz_atomic_data.cpp  effz_config.cpp  effz_config.h  effz_debug.cpp  effz_debug.h  effz_density.ipynb  effz_exceptions.cpp  effz_exceptions.h  effz_main_loop_functions.cpp  effz_main_loop_functions.h  effz_parallel_func.h  effz_python_utility.cpp  effz_python_utility.h  effz_result.cpp  effz_result.h  effz_spec_func.cpp  effz_spec_func.h  effz_typedefs.h  effz_user_input.cpp  effz_user_input.h  effz_utility.cpp  effz_zeroth_order.cpp  effz_zeroth_order.h  effz_zeroth_order_python.cpp  effz_zeroth_order_symbolic.py  grid.cpp  grid.h  integrate_nd.cpp  integrate_nd.h  main.cpp  spec_func.cpp  utility.cpp
